--- a/index.html
+++ b/index.html
@@ -62,13 +62,10 @@ Below is a high-level overview of the main steps:
 <p>Below are sample before/after results:</p>
 
 <p><strong>Original Image:</strong></p>
-<img src="images/original.jpg">
-
-<p><strong>Preprocessed Mask:</strong></p>
-<img src="images/mask.jpg">
+<img src="data/sample1.jpg">
 
 <p><strong>Final Scanned Output:</strong></p>
-<img src="images/scan.jpg">
+<img src="results/scanned_output.jpg">
 
 <hr>
 
@@ -95,14 +92,14 @@ Convex hull fallback significantly improved robustness on weak-edge images.
 
 <h2>7. Presentation Video</h2>
 <p>
-<a href="YOUR_PRESENTATION_LINK_HERE">Click here to view the presentation</a>
+<a href="https://drive.google.com/file/d/1FbYZx6D6df4BBmurzn-SFaYtZau6a5M6/view?usp=drive_link" target="_blank">Click here to view the presentation</a>
 </p>
 
 <hr>
 
 <h2>8. Code Repository</h2>
 <p>
-<a href="YOUR_GITHUB_LINK_HERE">GitHub Link</a>
+<a href="https://github.com/aarav141104/document_scanner_cs566 target="_blank">GitHub Link</a>
 </p>
 
 </body>
